--- a/block-BNaafu/Expense-Tracker/views/dashboard.ejs
+++ b/block-BNaafu/Expense-Tracker/views/dashboard.ejs
@@ -12,7 +12,7 @@
         <a class="logo" href="/"><strong>EXPENSE TRACKER</strong></a>
         <nav>
             <i class="user">Hii <%=user.name%></i>
-            <h6>Wallet: <%=balance%> Rs</h6>
+            <h6>Wallet: <%=bal%> Rs</h6>
             <a class="header-logout" href="/users/logout">Log Out</a>
         </nav>
     </header>
